--- a/index.html
+++ b/index.html
@@ -6,11 +6,12 @@
 -->
 <html>
 	<head>
-		<title>Spectral by HTML5 UP</title>
+		<title>BAC Stern Undergrad</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
 		<link rel="stylesheet" href="assets/css/main.css" />
+		<link rel="shortcut icon" type="image/x-icon" href="images/favicon.ico" />
 		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
 		<!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
 	</head>
@@ -98,26 +99,62 @@
 					<section id="three" class="wrapper style3 special">
 						<div class="inner">
 							<header class="major">
-								<h2>Accumsan mus tortor nunc aliquet</h2>
-								<p>Aliquam ut ex ut augue consectetur interdum. Donec amet imperdiet eleifend<br />
-								fringilla tincidunt. Nullam dui leo Aenean mi ligula, rhoncus ullamcorper.</p>
+								<h2>Executive Board</h2>
 							</header>
 							<ul class="features">
-								<li class="icon fa-paper-plane-o">
-									<h3>Arcu accumsan</h3>
-									<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
+								<li>
+									<h3>Nick DeMasi</h3>
+									<p>President<br />
+									Stern Class of 2019<br />
+									B.S. Finance & Data Science</p>
 								</li>
-								<li class="icon fa-laptop">
-									<h3>Ac Augue Eget</h3>
-									<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
+								<li>
+									<h3>Gabriel Peyser</h3>
+									<p>Co-Vice President<br />
+									Stern Class of 2018<br />
+									B.S.</p>
 								</li>
-								<li class="icon fa-code">
-									<h3>Mus Scelerisque</h3>
-									<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
+								<li>
+									<h3>Jill Xu</h3>
+									<p>Co-Vice President<br />
+									Stern Class of 2019<br />
+									B.S.</p>
 								</li>
-								<li class="icon fa-headphones">
-									<h3>Mauris Imperdiet</h3>
-									<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
+								<li>
+									<h3>Sijia Zhou</h3>
+									<p>Treasurer<br />
+									Stern Class of 2019<br />
+									B.S.</p>
+								</li>
+								<li>
+									<h3>Nisarg Patel</h3>
+									<p>Director of BaChallenge<br />
+									Stern Class of 2020<br />
+									B.S.</p>
+								</li>
+								<li>
+									<h3>Caitlyn Lubas</h3>
+									<p>Director of Marketing (Spring)<br />
+									Stern Class of 2020<br />
+									B.S.</p>
+								</li>
+								<li>
+									<h3>Kevin Wong</h3>
+									<p>Director of Marketing (Fall)<br />
+									Stern Class of 2019<br />
+									B.S.</p>
+								</li>
+								<li>
+									<h3>Shruti Manglik</h3>
+									<p>Direcotr of Operations<br />
+									Stern Class of 2020<br />
+									B.S.</p>
+								</li>
+								<li>
+									<h3>Virpartap Grewal</h3>
+									<p>Secretary<br />
+									Stern Class of 2020<br />
+									B.S.</p>
 								</li>
 							</ul>
 						</div>
