initial experiment with headshots

--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
 									<div id="menu">
 										<ul>
 											<li><a href="index.html">Home</a></li>
-											<li><a href="generic.html">Generic</a></li>
-											<li><a href="elements.html">Elements</a></li>
+											<li><a href="generic.html">Calendar</a></li>
+											<li><a href="elements.html">BaChallenge</a></li>
 											<li><a href="#">Sign Up</a></li>
 										</ul>
 									</div>
@@ -103,58 +103,76 @@
 							</header>
 							<ul class="features">
 								<li>
-									<h3>Nick DeMasi</h3>
-									<p>President<br />
-									Stern Class of 2019<br />
-									B.S. Finance & Data Science</p>
+									<div class="icons"><img src="images/Headshot.jpg" alt="" /><div>
+									    <h3>Nick DeMasi</h3>
+									    <p>President<br />
+									    Stern Class of 2019<br />
+									    B.S. Finance & Data Science</p>
+									</div>
 								</li>
 								<li>
-									<h3>Gabriel Peyser</h3>
-									<p>Co-Vice President<br />
-									Stern Class of 2018<br />
-									B.S.</p>
+								    <div>							   
+									    <h3>Gabriel Peyser</h3>
+									    <p>Co-Vice President<br />
+									    Stern Class of 2018<br />
+									    B.S.</p>
+									</div>									
 								</li>
 								<li>
-									<h3>Jill Xu</h3>
-									<p>Co-Vice President<br />
-									Stern Class of 2019<br />
-									B.S.</p>
+                                    <div>
+									    <h3>Jill Xu</h3>
+									    <p>Co-Vice President<br />
+									    Stern Class of 2019<br />
+									    B.S.</p>
+									</div>									
 								</li>
 								<li>
-									<h3>Sijia Zhou</h3>
-									<p>Treasurer<br />
-									Stern Class of 2019<br />
-									B.S.</p>
+                                    <div>
+									    <h3>Sijia Zhou</h3>
+									    <p>Treasurer<br />
+									    Stern Class of 2019<br />
+									    B.S.</p>
+									</div>									
 								</li>
 								<li>
-									<h3>Nisarg Patel</h3>
-									<p>Director of BaChallenge<br />
-									Stern Class of 2020<br />
-									B.S.</p>
+								    <div>								   
+									    <h3>Nisarg Patel</h3>
+									    <p>Director of BaChallenge<br />
+									    Stern Class of 2020<br />
+									    B.S.</p>
+									</div>								
 								</li>
 								<li>
-									<h3>Caitlyn Lubas</h3>
-									<p>Director of Marketing (Spring)<br />
-									Stern Class of 2020<br />
-									B.S.</p>
+								    <div>								   
+									    <h3>Caitlyn Lubas</h3>
+									    <p>Director of Marketing (Spring)<br />
+									    Stern Class of 2020<br />
+									    B.S.</p>
+									</div>								
 								</li>
 								<li>
-									<h3>Kevin Wong</h3>
-									<p>Director of Marketing (Fall)<br />
-									Stern Class of 2019<br />
-									B.S.</p>
+								    <div>								   
+									    <h3>Kevin Wong</h3>
+									    <p>Director of Marketing (Fall)<br />
+									    Stern Class of 2019<br />
+									    B.S.</p>
+									</div>							
 								</li>
 								<li>
-									<h3>Shruti Manglik</h3>
-									<p>Direcotr of Operations<br />
-									Stern Class of 2020<br />
-									B.S.</p>
+								    <div>								   
+									    <h3>Shruti Manglik</h3>
+									    <p>Direcotr of Operations<br />
+									    Stern Class of 2020<br />
+									    B.S.</p>
+									</div>								
 								</li>
 								<li>
-									<h3>Virpartap Grewal</h3>
-									<p>Secretary<br />
-									Stern Class of 2020<br />
-									B.S.</p>
+								    <div>
+									    <h3>Virpartap Grewal</h3>
+									    <p>Secretary<br />
+									    Stern Class of 2020<br />
+									    B.S.</p>
+									</div>
 								</li>
 							</ul>
 						</div>
