added headshots to homepage

--- a/index.html
+++ b/index.html
@@ -103,7 +103,8 @@
 							</header>
 							<ul class="features">
 								<li>
-									<div class="icons"><img src="images/Headshot.jpg" alt="" /><div>
+									<div class="headshot"><img src="images/Headshot.jpg" alt=""/></div>
+									<div class ="bio">
 									    <h3>Nick DeMasi</h3>
 									    <p>President<br />
 									    Stern Class of 2019<br />
@@ -111,7 +112,8 @@
 									</div>
 								</li>
 								<li>
-								    <div>							   
+								    <div class="headshot"><img src="images/Headshot.jpg" alt=""/></div>
+								    <div class="bio">							   
 									    <h3>Gabriel Peyser</h3>
 									    <p>Co-Vice President<br />
 									    Stern Class of 2018<br />
@@ -119,7 +121,8 @@
 									</div>									
 								</li>
 								<li>
-                                    <div>
+								    <div class="headshot"><img src="images/Headshot.jpg" alt=""/></div>
+                                    <div class="bio">
 									    <h3>Jill Xu</h3>
 									    <p>Co-Vice President<br />
 									    Stern Class of 2019<br />
@@ -127,7 +130,8 @@
 									</div>									
 								</li>
 								<li>
-                                    <div>
+								    <div class="headshot"><img src="images/Headshot.jpg" alt=""/></div>
+                                    <div class="bio">
 									    <h3>Sijia Zhou</h3>
 									    <p>Treasurer<br />
 									    Stern Class of 2019<br />
@@ -135,7 +139,8 @@
 									</div>									
 								</li>
 								<li>
-								    <div>								   
+								    <div class="headshot"><img src="images/Headshot.jpg" alt=""/></div>
+								    <div class="bio">								   
 									    <h3>Nisarg Patel</h3>
 									    <p>Director of BaChallenge<br />
 									    Stern Class of 2020<br />
@@ -143,7 +148,8 @@
 									</div>								
 								</li>
 								<li>
-								    <div>								   
+								    <div class="headshot"><img src="images/Headshot.jpg" alt=""/></div>
+								    <div class="bio">								   
 									    <h3>Caitlyn Lubas</h3>
 									    <p>Director of Marketing (Spring)<br />
 									    Stern Class of 2020<br />
@@ -151,7 +157,8 @@
 									</div>								
 								</li>
 								<li>
-								    <div>								   
+								    <div class="headshot"><img src="images/Headshot.jpg" alt=""/></div>
+								    <div class="bio">								   
 									    <h3>Kevin Wong</h3>
 									    <p>Director of Marketing (Fall)<br />
 									    Stern Class of 2019<br />
@@ -159,7 +166,8 @@
 									</div>							
 								</li>
 								<li>
-								    <div>								   
+								    <div class="headshot"><img src="images/Headshot.jpg" alt=""/></div>
+								    <div class="bio">								   
 									    <h3>Shruti Manglik</h3>
 									    <p>Direcotr of Operations<br />
 									    Stern Class of 2020<br />
@@ -167,7 +175,8 @@
 									</div>								
 								</li>
 								<li>
-								    <div>
+								    <div class="headshot"><img src="images/Headshot.jpg" alt=""/></div>
+								    <div class="bio">
 									    <h3>Virpartap Grewal</h3>
 									    <p>Secretary<br />
 									    Stern Class of 2020<br />
