--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 									<div id="menu">
 										<ul>
 											<li><a href="index.html">Home</a></li>
-											<li><a href="generic.html">Calendar</a></li>
+											<li><a href="calendar.html">Calendar</a></li>
 											<li><a href="elements.html">BaChallenge</a></li>
 											<li><a href="#">Sign Up</a></li>
 										</ul>
