--- a/calendar.html
+++ b/calendar.html
@@ -38,7 +38,7 @@
 									<div id="menu">
 										<ul>
 											<li><a href="index.html">Home</a></li>
-											<li><a href="calendar.html">Generic</a></li>
+											<li><a href="calendar.html">Calendar</a></li>
 											<li><a href="elements.html">Elements</a></li>
 											<li><a href="#">Sign Up</a></li>
 											<li><a href="#">Log In</a></li>
