--- a/calendar.html
+++ b/calendar.html
@@ -25,7 +25,7 @@
 						<h1><a href="index.html">BAC</a></h1>
 
 						<div class="dropdown">
-						  <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">Comming Events
+						  <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">Upcomming Events
 						  <span class="caret"></span></button>
 						  <ul id="club_events" class="dropdown-menu">
 						  </ul>
