--- a/calendar.html
+++ b/calendar.html
@@ -24,13 +24,6 @@
 					<header id="header">
 						<h1><a href="index.html">BAC</a></h1>
 
-						<div class="dropdown">
-						  <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">Upcomming Events
-						  <span class="caret"></span></button>
-						  <ul id="club_events" class="dropdown-menu">
-						  </ul>
-						</div>
-
 						<nav id="nav">
 							<ul>
 								<li class="special">
@@ -52,11 +45,17 @@
 				<!-- Main -->
 					<article id="main">
 						<header>
-							<h2>Generic Page</h2>
+							<h2>Upcoming Events</h2>
 							<p>Aliquam ut ex ut interdum donec amet imperdiet eleifend</p>
 						</header>
 						<section class="wrapper style5">
 							<div class="inner">
+								<div class="dropdown">
+									<button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">Fall 2017
+									<span class="caret"></span></button>
+									<ul id="club_events" class="dropdown-menu">
+									</ul>
+								</div>
 							</div>
 						</section>
 					</article>
