hardcoded adding test account to SterbBAC list

--- a/index.html
+++ b/index.html
@@ -188,12 +188,10 @@
 					<section id="cta" class="wrapper style4">
 						<div class="inner">
 							<header>
-								<h2>Arcue ut vel commodo</h2>
-								<p>Aliquam ut ex ut augue consectetur interdum endrerit imperdiet amet eleifend fringilla.</p>
+								<input id="subEmail" type="text" size="45" placeholder="enter email here">
 							</header>
 							<ul class="actions vertical">
-								<li><a href="#" class="button fit special">Activate</a></li>
-								<li><a href="#" class="button fit">Learn More</a></li>
+								<li><a id="subEmailButton" href="#" class="button fit special">Subscribe</a></li>
 							</ul>
 						</div>
 					</section>
@@ -223,6 +221,6 @@
 			<!--[if lte IE 8]><script src="assets/js/ie/respond.min.js"></script><![endif]-->
 			<script src="assets/js/main.js"></script>
 			<script src="assets/js/googlecal.js"></script>
-
+			<script src="assets/js/mailchimp.js"></script>
 	</body>
 </html>
