updated the text per spec

--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
 					<section id="cta" class="wrapper style4">
 						<div class="inner">
 							<header>
-								<input id="subEmail" type="text" size="45" placeholder="enter email here">
+								<input id="subEmail" type="text" size="45" placeholder="Sign up to get our emails! Enter your email here.">
 							</header>
 							<ul class="actions vertical">
 								<li><a id="subEmailButton" href="#" class="button fit special">Subscribe</a></li>
