added hardcoded calendar treeview

--- a/calendar.html
+++ b/calendar.html
@@ -10,6 +10,7 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+		<link rel="stylesheet" href="assets/css/bootstrap-treeview.css">
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
@@ -53,9 +54,11 @@
 							<span class="caret"></span></button>
 							<ul id="club_events" class="dropdown-menu">
 							</ul>
-						</div>						
+						</div>
 						<section class="wrapper style5">
 							<div class="inner">
+								<div id="fall-tree"></div>
+								<div id="spring-tree"></div>
 							</div>
 						</section>
 					</article>
@@ -86,6 +89,8 @@
 			<script src="assets/js/main.js"></script>
 			<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 			<script src="assets/js/googlecal.js"></script>
+			<script src="assets/js/bootstrap-treeview.js"></script>
+			<script src="assets/js/caltree.js"></script>
 
 	</body>
 </html>
