added float:left to the treeviews

--- a/calendar.html
+++ b/calendar.html
@@ -56,9 +56,10 @@
 							</ul>
 						</div>
 						<section class="wrapper style5">
+							<div id="fall-tree"  style="float:left;"></div>
+							<div id="spring-tree" style="float:left;"></div>
 							<div class="inner">
-								<div id="fall-tree"></div>
-								<div id="spring-tree"></div>
+
 							</div>
 						</section>
 					</article>
