made the calendar treeview floating at the top of the container

--- a/calendar.html
+++ b/calendar.html
@@ -13,6 +13,7 @@
 		<link rel="stylesheet" href="assets/css/bootstrap-treeview.css">
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
 		<link rel="stylesheet" href="assets/css/main.css" />
+		<link rel="stylesheet" href="assets/css/caltree.css" />
 		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
 		<!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
 	</head>
@@ -55,7 +56,7 @@
 							<ul id="club_events" class="dropdown-menu">
 							</ul>
 						</div>
-						<section class="wrapper style5">
+						<section class="wrapper style5 float-top">
 							<div id="fall-tree"  style="float:left;"></div>
 							<div id="spring-tree" style="float:left;"></div>
 							<div class="inner">
