added treeview and shows the events

--- a/calendar.html
+++ b/calendar.html
@@ -50,12 +50,12 @@
 							<h2>Upcoming Events</h2>
 							<p>Aliquam ut ex ut interdum donec amet imperdiet eleifend</p>
 						</header>
-						<div class="dropdown">
+						<!--div class="dropdown">
 							<button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">Fall 2017
 							<span class="caret"></span></button>
 							<ul id="club_events" class="dropdown-menu">
 							</ul>
-						</div>
+						</div-->
 						<section class="wrapper style5 float-top">
 							<div id="fall-tree"  style="float:left;"></div>
 							<div id="spring-tree" style="float:left;"></div>
@@ -90,7 +90,6 @@
 			<!--[if lte IE 8]><script src="assets/js/ie/respond.min.js"></script><![endif]-->
 			<script src="assets/js/main.js"></script>
 			<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-			<script src="assets/js/googlecal.js"></script>
 			<script src="assets/js/bootstrap-treeview.js"></script>
 			<script src="assets/js/caltree.js"></script>
 
