--- a/calendar.html
+++ b/calendar.html
@@ -56,12 +56,12 @@
 							<ul id="club_events" class="dropdown-menu">
 							</ul>
 						</div-->
-						<section class="wrapper style5 float-top">
-							<div id="fall-tree"  style="float:left;"></div>
-							<div id="spring-tree" style="float:left;"></div>
-							<div class="inner">
-
+						<section class="wrapper style5 float-top clearfix">
+							<div class="column">
+								<div id="fall-tree"></div>
+								<div id="spring-tree"></div>
 							</div>
+							<div class="inner column">
 						</section>
 					</article>
 
