scrolling fixes, bachallenge update, subtext addition

--- a/index.html
+++ b/index.html
@@ -32,7 +32,6 @@
 											<li><a href="index.html">Home</a></li>
 											<li><a href="calendar.html">Calendar</a></li>
 											<li><a href="elements.html">BaChallenge</a></li>
-											<li><a href="#">Sign Up</a></li>
 										</ul>
 									</div>
 								</li>
@@ -110,21 +109,21 @@
 								</li>
 								<li>
 								    <div class="headshot"><img src="images/Headshot.jpg" alt=""/></div>
-								    <div class="bio">							   
-									    <h3>Gabriel Peyser</h3>
+								    <div class="bio">
+									    <h3>Jill Xu</h3>
 									    <p>Co-Vice President<br />
-									    Stern Class of 2018<br />
-									    B.S.</p>
-									</div>									
+									    Stern Class of 2019<br />
+									    B.S. Finance & Data Science</p>
+									</div>
 								</li>
 								<li>
 								    <div class="headshot"><img src="images/Headshot.jpg" alt=""/></div>
                                     <div class="bio">
-									    <h3>Jill Xu</h3>
+									    <h3>Gabe Peyser</h3>
 									    <p>Co-Vice President<br />
-									    Stern Class of 2019<br />
+									    Stern Class of 2018<br />
 									    B.S.</p>
-									</div>									
+									</div>
 								</li>
 								<li>
 								    <div class="headshot"><img src="images/Headshot.jpg" alt=""/></div>
@@ -133,43 +132,43 @@
 									    <p>Treasurer<br />
 									    Stern Class of 2019<br />
 									    B.S.</p>
-									</div>									
+									</div>
 								</li>
 								<li>
 								    <div class="headshot"><img src="images/Headshot.jpg" alt=""/></div>
-								    <div class="bio">								   
+								    <div class="bio">
 									    <h3>Nisarg Patel</h3>
 									    <p>Director of BaChallenge<br />
 									    Stern Class of 2020<br />
 									    B.S.</p>
-									</div>								
+									</div>
 								</li>
 								<li>
 								    <div class="headshot"><img src="images/Headshot.jpg" alt=""/></div>
-								    <div class="bio">								   
+								    <div class="bio">
 									    <h3>Caitlyn Lubas</h3>
 									    <p>Director of Marketing (Spring)<br />
 									    Stern Class of 2020<br />
 									    B.S.</p>
-									</div>								
+									</div>
 								</li>
 								<li>
 								    <div class="headshot"><img src="images/Headshot.jpg" alt=""/></div>
-								    <div class="bio">								   
+								    <div class="bio">
 									    <h3>Kevin Wong</h3>
 									    <p>Director of Marketing (Fall)<br />
 									    Stern Class of 2019<br />
 									    B.S.</p>
-									</div>							
+									</div>
 								</li>
 								<li>
 								    <div class="headshot"><img src="images/Headshot.jpg" alt=""/></div>
-								    <div class="bio">								   
+								    <div class="bio">
 									    <h3>Shruti Manglik</h3>
 									    <p>Direcotr of Operations<br />
 									    Stern Class of 2020<br />
 									    B.S.</p>
-									</div>								
+									</div>
 								</li>
 								<li>
 								    <div class="headshot"><img src="images/Headshot.jpg" alt=""/></div>
@@ -188,7 +187,7 @@
 					<section id="cta" class="wrapper style4">
 						<div class="inner">
 							<header>
-								<input id="subEmail" type="text" size="45" placeholder="Sign up to get our emails! Enter your email here.">
+								<input id="subEmail" type="text" size="45" placeholder="Sign up for our mailing list! Enter your email here.">
 							</header>
 							<ul class="actions vertical">
 								<li><a id="subEmailButton" href="#" class="button fit special">Subscribe</a></li>
@@ -200,13 +199,13 @@
 					<footer id="footer">
 						<ul class="icons">
 							<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
-							<li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
+							<li><a href="https://www.facebook.com/SternBAC/" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
 							<li><a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
 							<li><a href="#" class="icon fa-dribbble"><span class="label">Dribbble</span></a></li>
 							<li><a href="#" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
 						</ul>
 						<ul class="copyright">
-							<li>&copy; Untitled</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+							<li>&copy; Business Analytics Club</li>
 						</ul>
 					</footer>
 
