--- a/calendar.html
+++ b/calendar.html
@@ -34,9 +34,7 @@
 										<ul>
 											<li><a href="index.html">Home</a></li>
 											<li><a href="calendar.html">Calendar</a></li>
-											<li><a href="elements.html">Elements</a></li>
-											<li><a href="#">Sign Up</a></li>
-											<li><a href="#">Log In</a></li>
+											<li><a href="elements.html">BaChallenge</a></li>
 										</ul>
 									</div>
 								</li>
@@ -48,7 +46,7 @@
 					<article id="main">
 						<header>
 							<h2>Upcoming Events</h2>
-							<p>Aliquam ut ex ut interdum donec amet imperdiet eleifend</p>
+							<p>Check out what we have planned!</p>
 						</header>
 						<!--div class="dropdown">
 							<button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">Fall 2017
@@ -58,6 +56,7 @@
 						</div-->
 						<section class="wrapper style5 float-top clearfix">
 							<div class="column">
+								<h4> <b> Navigate by semester: </b></h4>
 								<div id="fall-tree"></div>
 								<div id="spring-tree"></div>
 							</div>
@@ -69,13 +68,13 @@
 					<footer id="footer">
 						<ul class="icons">
 							<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
-							<li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
+							<li><a href="https://www.facebook.com/SternBAC/" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
 							<li><a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
 							<li><a href="#" class="icon fa-dribbble"><span class="label">Dribbble</span></a></li>
 							<li><a href="#" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
 						</ul>
 						<ul class="copyright">
-							<li>&copy; Untitled</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+							<li>&copy; Business Analytics Club</li>
 						</ul>
 					</footer>
 
