enabled applications for bachallenge

--- a/elements.html
+++ b/elements.html
@@ -44,8 +44,15 @@
 					<article id="main">
 						<header>
 							<h2>BaChallenge</h2>
-							<p>Our teams use data analytics to explore real-life cases.</p>
+							<p>Applications close September 10th, 2017 at 11:59PM EST</p>
+							<a href="https://docs.google.com/forms/d/1MKI3vkwhCu751_rOuZcIiZ_7d3-8HN5zIf36vkcSOOk/viewform" class="button special">Apply Now!</a>
 						</header>
+						<section class = "wrapper style4 special">
+							<h2>About the Team</h2>
+							<p>The BaChallenge Team is a new initiative launched by the undergraduate Business Analytics Club. It has two main purposes: Provide a sense of community for Stern students interested in the fields of "tech" and "analytics" as well as provide industry insight so that they can learn about career opportunities with firms that do not traditionally recruit at Stern.
+Help build upon the technical skills of students through workshops & participation in a Data Science Project
+</p>
+						</section>
 						<section class="wrapper style5">
 							<div class="inner">
 
