fixed tree, homepage images, bachallenge

--- a/elements.html
+++ b/elements.html
@@ -7,7 +7,7 @@
 -->
 <html>
 	<head>
-		<title>Elements - Spectral by HTML5 UP</title>
+		<title>BAChallenge</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
@@ -49,11 +49,13 @@
 						</header>
 						<section class = "wrapper style4 special">
 							<h2>About the Team</h2>
-							<p>The BaChallenge Team is a new initiative launched by the undergraduate Business Analytics Club. It has two main purposes: Provide a sense of community for Stern students interested in the fields of "tech" and "analytics" as well as provide industry insight so that they can learn about career opportunities with firms that do not traditionally recruit at Stern.
-Help build upon the technical skills of students through workshops & participation in a Data Science Project
-</p>
+							<p>The BaChallenge Team is a new initiative launched by the undergraduate Business Analytics Club.
+								The primary goal is to build upon the technical skills of students through workshops and participation in a semester-long data science project.
+								We hope for the program to foster a sense of community for Stern students interested in the fields of "tech" and "analytics"
+								as well as provide industry insight so that they can learn about career opportunities with firms that do not traditionally recruit at Stern.
+							</p>
 						</section>
-						<section class="wrapper style5">
+						<section class="wrapper style7">
 							<div class="inner">
 
 									<section id="three" class="wrapper style6 special">
