--- a/index.html
+++ b/index.html
@@ -74,19 +74,19 @@
 				<!-- Two -->
 					<section id="two" class="wrapper alt style2">
 						<section class="spotlight">
-							<div class="image"><img src="images/pic01.jpg" alt="" /></div><div class="content">
+							<div class="image"><img src="images/homepage4.jpg" alt="" /></div><div class="content">
 								<h2 id="eventTitle1"></h2>
 								<p id="eventDetails1"></p>
 							</div>
 						</section>
 						<section class="spotlight">
-							<div class="image"><img src="images/pic02.jpg" alt="" /></div><div class="content">
+							<div class="image"><img src="images/homepage3.jpg" alt="" /></div><div class="content">
 								<h2 id="eventTitle2"></h2>
 								<p id="eventDetails2"></p>
 							</div>
 						</section>
 						<section class="spotlight">
-							<div class="image"><img src="images/pic03.jpg" alt="" /></div><div class="content">
+							<div class="image"><img src="images/homepage6.jpg" alt="" /></div><div class="content">
 								<h2 id="eventTitle3"></h2>
 								<p id="eventDetails3"></p>
 							</div>
