--- a/elements.html
+++ b/elements.html
@@ -136,7 +136,9 @@
 													</div>
 												</li>
 											</ul>
-										</div>
+									</section>
+							</div>
+						</section>
 					</article>
 
 				<!-- Footer -->
