--- a/elements.html
+++ b/elements.html
@@ -9,6 +9,8 @@
 		<title>BAChallenge</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+		<link rel="stylesheet" href="assets/css/bootstrap-treeview.css">
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<link rel="stylesheet" href="assets/css/calendar.css" />
@@ -56,8 +58,7 @@
 						</section>
 						<section class="wrapper style7">
 							<div class="inner">
-
-									<section id="three" class="wrapper style6 special">
+								<section id="three" class="wrapper style6 special">
 										<!--<div class="inner">
 											<header class="major">-->
 												<h2>Current Members</h2>
@@ -137,6 +138,7 @@
 												</li>
 											</ul>
 									</section>
+								<div id="doc-tree"></div>
 							</div>
 						</section>
 					</article>
@@ -165,6 +167,9 @@
 			<script src="assets/js/util.js"></script>
 			<!--[if lte IE 8]><script src="assets/js/ie/respond.min.js"></script><![endif]-->
 			<script src="assets/js/main.js"></script>
+			<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+			<script src="assets/js/bootstrap-treeview.js"></script>
+			<script src="assets/js/doctree.js"></script>
 
 	</body>
 </html>
