fixed bachallenge page

--- a/elements.html
+++ b/elements.html
@@ -44,9 +44,11 @@
 				<!-- Main -->
 					<article id="main">
 						<header>
+							<br>
 							<h2>BaChallenge</h2>
 							<p>Applications close September 10th, 2017 at 11:59PM EST</p>
 							<a href="https://docs.google.com/forms/d/1MKI3vkwhCu751_rOuZcIiZ_7d3-8HN5zIf36vkcSOOk/viewform" class="button special">Apply Now!</a>
+							<br>
 						</header>
 						<section class = "wrapper style4 special">
 							<h2>About the Team</h2>
@@ -138,6 +140,7 @@
 												</li>
 											</ul>
 									</section>
+									<h2> Past projects by semester: </h2>
 								<div id="doc-tree"></div>
 							</div>
 						</section>
