bachallenge tree fixes

--- a/elements.html
+++ b/elements.html
@@ -58,9 +58,8 @@
 								as well as provide industry insight so that they can learn about career opportunities with firms that do not traditionally recruit at Stern.
 							</p>
 						</section>
-						<section class="wrapper style7">
+						<section class="wrapper style7 special">
 							<div class="inner">
-								<section id="three" class="wrapper style6 special">
 										<!--<div class="inner">
 											<header class="major">-->
 												<h2>Current Members</h2>
@@ -140,8 +139,11 @@
 												</li>
 											</ul>
 									</section>
+									<section class = "wrapper style8 special">
 									<h2> Past projects by semester: </h2>
+									<div class = "wrapper style9">
 								<div id="doc-tree"></div>
+							</div>
 							</div>
 						</section>
 					</article>
