--- a/index.html
+++ b/index.html
@@ -58,10 +58,8 @@
 					<section id="one" class="wrapper style1 special">
 						<div class="inner">
 							<header class="major">
-								<h2>Arcu aliquet vel lobortis ata nisl<br />
-								eget augue amet aliquet nisl cep donec</h2>
-								<p>Aliquam ut ex ut augue consectetur interdum. Donec amet imperdiet eleifend<br />
-								fringilla tincidunt. Nullam dui leo Aenean mi ligula, rhoncus ullamcorper.</p>
+								<h2>Mission Statement</h2>
+								<p>To provide resources and support for students interested in applying</br> data analysis to business problems in their chosen industry</p>
 							</header>
 							<ul class="icons major">
 								<li><span class="icon fa-cubes major style2"><span class="label">Lorem</span></span></li>
@@ -101,7 +99,7 @@
 							</header>
 							<ul class="features">
 								<li>
-									<div class="headshot"><img src="images/Headshot.jpg" alt=""/></div>
+									<div class="headshot"><img src="images/nick.jpg" alt=""/></div>
 									<div class ="bio">
 									    <h3>Nick DeMasi</h3>
 									    <p>President<br />
@@ -110,7 +108,7 @@
 									</div>
 								</li>
 								<li>
-								    <div class="headshot"><img src="images/Headshot.jpg" alt=""/></div>
+								    <div class="headshot"><img src="images/nick.jpg" alt=""/></div>
 								    <div class="bio">
 									    <h3>Jill Xu</h3>
 									    <p>Co-Vice President<br />
@@ -119,7 +117,7 @@
 									</div>
 								</li>
 								<li>
-								    <div class="headshot"><img src="images/Headshot.jpg" alt=""/></div>
+								    <div class="headshot"><img src="images/gabe.jpg" alt=""/></div>
                                     <div class="bio">
 									    <h3>Gabe Peyser</h3>
 									    <p>Co-Vice President<br />
@@ -145,7 +143,7 @@
 									    B.S.</p>
 									</div>
 								</li>
-								<li>
+								<!-- <li>
 								    <div class="headshot"><img src="images/Headshot.jpg" alt=""/></div>
 								    <div class="bio">
 									    <h3>Caitlyn Lubas</h3>
@@ -153,7 +151,7 @@
 									    Stern Class of 2020<br />
 									    B.S.</p>
 									</div>
-								</li>
+								</li> -->
 								<li>
 								    <div class="headshot"><img src="images/Headshot.jpg" alt=""/></div>
 								    <div class="bio">
@@ -172,7 +170,7 @@
 									    B.S.</p>
 									</div>
 								</li>
-								<li>
+								<!-- <li>
 								    <div class="headshot"><img src="images/Headshot.jpg" alt=""/></div>
 								    <div class="bio">
 									    <h3>Virpartap Grewal</h3>
@@ -180,7 +178,7 @@
 									    Stern Class of 2020<br />
 									    B.S.</p>
 									</div>
-								</li>
+								</li> -->
 							</ul>
 						</div>
 					</section>
